--- a/Сalculator_calor/Exercise.resx
+++ b/Сalculator_calor/Exercise.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Exercise_richTextBox.Text" xml:space="preserve">
+  <data name="Exercise_TextBox.Text" xml:space="preserve">
     <value>—Минимальная активность, сидячая работа, не требующая значительных физических нагрузок;
 —Легкая – слабый уровень активности: интенсивные упражнения не менее 20 минут один-три раза в неделю. Это может быть езда на велосипеде, бег трусцой, баскетбол, плавание, катание на коньках и т. д. Если вы не тренируетесь регулярно, но сохраняете занятый стиль жизни, который требует частой ходьбы в течение длительного времени, то выберите этот коэффициент;
 —Средняя – умеренный уровень активности: интенсивная тренировка не менее 30-60 мин три-четыре раза в неделю (любой из перечисленных выше видов спорта);Т
